First stab at an acceptance test

--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,34 @@
     __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
   </script>
   <script type="text/javascript" src="assets/main.js"></script>
+    
+  <div class="schedule">
+    <div class="row">
+      <div class="timeline-corner"></div>
+      <div class="event-block">
+        <div class="room-event title">Main Hall</div>
+        <div class="room-event title">3rd Floor Lg Conf</div>
+        <div class="room-event title">2nd Floor Med Conf</div>
+        <div class="room-event title">1st Floor Theater</div>
+        <div class="room-event title">3rd Floor Board Room</div>
+        <div class="room-event title">2nd Floor Coding Corner</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="timeline-block">
+        <div class="time-30">8:00</div>
+        <div class="time-30">8:30</div>
+        <div class="time-30">9:00</div>
+        <div class="time-30">9:30</div>
+        <div class="time-30">10:00</div>
+      </div>
+      <div class="event-block">
+        <div class="plenary-event event talk time-30">Registration Desk Open, Continental Breakfast</div>
+        <div class="plenary-event event talk time-30">Conference Welcome and Raffle</div>
+        <div class="plenary-event event talk time-40">People as the Conveyer of Knowledge</div>
+        <div class="plenary-event event break time-20">BREAK</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
